Formatted files with prettier & eslint
